# PE_Hackathon

./: .dockerignore  .env.example  Dockerfile  FAILURE_MODES.md  README.md  docker-compose.yml  pyproject.toml  test_shortener_e2e.py
.github/workflows/: ci.yml
Docs/: ARCHITECTURE.md  CAPACITY_PLAN.md  CI_CD.md  CONFIGURATION.md  DECISION_LOG.md  ERROR_HANDLING.md  FAILURE_MODES.md  INCIDENT_RESPONSE_BRONZE.md  OBSERVABILITY.md  OPERATIONAL_RUNBOOK.md  RCA_DRILL.md  load-test-baseline.md  load-test-silver.md
alertmanager/: alertmanager.yml
alloy/: config.alloy
app/: __init__.py  cache.py  database.py  errors.py  monitoring.py  seed.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  urls.py  users.py
csv/: events.csv  urls.csv  users.csv
grafana/provisioning/dashboards/: dashboard.yml  url-shortener.json
grafana/provisioning/datasources/: datasources.yml
k6/: load-test-200vus.js  load-test-50vus.js  load_test.js
k6/results/: load-test-results.json  silver-200vus-results.json
nginx/: nginx.conf
prometheus/: alert_rules.yml  alerts.yml  prometheus.yml
tests/: __init__.py  conftest.py  test_models.py  test_routes.py
